welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: ':' expected but ')' found.
override def run(c) {
                  ^MethodsPicture:44: error: identifier expected but '}' found.
}
^