welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run(c) {
  for (i<-0 to 2){
  	for (i<-0 to 2){
  		for (i<-0 to 3){
    		faireV(c)
  			for (i<-0 to 3){
   			avance()
    		}}
			}
   gauche()
   for (i<-0 to 3){ 
   avance()}
  } }
 

def faireV(c:Color){
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
}

def faire4v(){
  for (i<- 1 to 3{
    faireV(color.yellow);
    faireV(color.red);
    faireV(color.blue);
    faireV(color.green);
    for (i<- 1 to 5)
  })
}